--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <script type="module" src="./dist/index.js" defer></script>
   </head>
   <body>
-    <input />
+    <input name="name" />
     <button>Concat!</button>
   </body>
 </html>
